--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Chatbot</title>
-    
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     <script src="/static/script.js"></script>
 </head>
 <body>
-    <h1>Chatbot</h1>
-    <div>
-        <label for="question">Enter your question:</label>
-        <input type="text" id="question" name="question">
+    
+    <div class="chat-container">
+        <h1>Chatbot</h1>
+        <div class="chat-history" id="chat-history"></div> <!-- Added a div for chat history -->
+        <div>
+            <label for="question">Enter your question:</label>
+            <input type="text" id="question" name="question">
+        </div>
+        <button onclick="getPredictedResponse()">Get Response</button>
     </div>
-    <div id="response"></div>
-    <button onclick="getPredictedResponse()">Get Response</button>
 </body>
 </html>
