--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
             <input type="text" id="question" name="question">
         </div>
         <button onclick="getPredictedResponse()">Get Response</button>
+        <div class="chat-history" id="chat-history"></div>
+    
     </div>
 </body>
 </html>
