--- a/templates/admin.html
+++ b/templates/admin.html
@@ -65,7 +65,7 @@
         }
 
         .logout-btn {
-            background-color: #333;
+            color: black;
             position: absolute;
             top: 20px;
             right: 20px;
@@ -98,10 +98,19 @@
             <p>Click below to edit responses</p>
             <a href="/edit_responses" class="btn">Edit Responses</a>
         </div>
+        <div class="card">
+            <h2>Train Model</h2>
+            <p>Click below to retrain the model with updated intents</p>
+            <a href="/train_model_page" class="btn">Train Model</a>
+
+    
+        </div>
     </div>
     <a href="/logout" class="btn logout-btn">Logout</a>
     <div class="footer">
         Admin Dashboard &copy; 2024. All rights reserved.
     </div>
+
+
 </body>
 </html>
