--- a/templates/admin.html
+++ b/templates/admin.html
@@ -65,7 +65,7 @@
         }
 
         .logout-btn {
-            color: black;
+            background-color: black;
             position: absolute;
             top: 20px;
             right: 20px;
