delete intent added

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -99,6 +99,12 @@
             <a href="/edit_responses" class="btn">Edit Responses</a>
         </div>
         <div class="card">
+            <h2>Delete Intent</h2>
+            <p>Click below to delete an intent</p>
+            <a href="/delete_intent_page" class="btn">Delete Intent</a>
+        </div>
+        
+        <div class="card">
             <h2>Train Model</h2>
             <p>Click below to retrain the model with updated intents</p>
             <a href="/train_model_page" class="btn">Train Model</a>
