--- a/templates/train.html
+++ b/templates/train.html
@@ -21,7 +21,7 @@
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 800px;
             margin: 0 auto;
             padding: 20px;
             display: flex;
@@ -60,12 +60,13 @@
             border-radius: 5px;
             overflow: hidden;
             margin-bottom: 20px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .progress-bar {
             width: 0;
             height: 100%;
-            background-color: #4CAF50;
+            background-color: #007bff;
             text-align: center;
             line-height: 30px;
             color: white;
