Merit Calculation Module Added

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -118,7 +118,7 @@
     <div class="sidebar">
         <a href="#">Dashboard</a>
         <a href="/add_intent_page">Add Intent</a>
-        <a href="/edit_responses">Edit Responses</a>
+        <a href="/edit_responses">Edit Intents</a>
         <a href="/delete_intent_page">Delete Intent</a>
         <a href="/train_model_page">Train Model</a>
         <a href="/manage_files">Manage Files</a>
@@ -131,9 +131,9 @@
             <a href="/add_intent_page" class="btn">Add New Intent</a>
         </div>
         <div class="card">
-            <h2>Edit Responses</h2>
-            <p>Click below to edit responses</p>
-            <a href="/edit_responses" class="btn">Edit Responses</a>
+            <h2>Edit Intents</h2>
+            <p>Click below to edit Intents</p>
+            <a href="/edit_responses" class="btn">Edit Intents</a>
         </div>
         <div class="card">
             <h2>Delete Intent</h2>
@@ -146,10 +146,16 @@
             <a href="/train_model_page" class="btn">Train Model</a>
         </div>
         <div class="card">
-            <h2>Manage Uploaded Files</h2>
+            <h2>Manage File Uploads</h2>
             <p>Click below to manage uploaded files</p>
             <a href="/manage_files" class="btn">Manage Files</a>
         </div>
+        <div class="card">
+            <h2>Create New Admin User</h2>
+            <p>Click below to create a new admin user.</p>
+            <a href="/create_admin_user_page" class="btn">Create New Admin User</a>
+        </div>
+        
     </div>
     <div class="footer">
         Admin Dashboard &copy; 2024. All rights reserved.
