--- a/templates/login.html
+++ b/templates/login.html
@@ -67,6 +67,15 @@
 <body>
     <div class="login-container">
         <h1>Login</h1>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div>
+                    {% for message in messages %}
+                        <div>{{ message }}</div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
         <form method="POST" action="/login">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
